# esy

./: .gitignore  .travis.yml  Makefile  esy.lock.json  package.json
.ci/: build-nix.yml  build-release.yml
docs/: getting-started.md
esy/: BuildManifest.ml  BuildSandbox.ml  DepSpec.ml  DepSpec.mli  DepSpecImpl.ml  DepSpecLexer.mll  DepSpecParser.mly  NpmRelease.ml  Plan.ml  Plan.mli  Scope.ml  Scope.mli  dune
esy-install/: DepSpec.ml  DepSpec.mli  Dist.ml  Dist.mli  DistResolver.ml  DistResolver.mli  Fetch.ml  Override.ml  Override.mli  Package.ml  Package.mli  PackageSource.ml  PackageSource.mli  SandboxSpec.ml  SandboxSpec.mli  SolutionLock.ml  Source.ml
esy-lib/: CurlWrapper.ml  Store.re  dune
esy-solve/: OpamManifest.ml  OpamManifest.mli  OpamOverrides.re  OpamOverrides.rei  OpamRegistry.ml  OpamRegistry.mli  Package.ml  Package.mli  PackageJson.ml  Resolver.ml  Sandbox.ml  Solver.ml
esyi/: DistResolver.ml  DistStorage.ml  Fetch.ml  FetchStorage.ml  NpmRegistry.ml  NpmRegistry.mli  OpamManifest.ml  OpamOverrides.re  OpamRegistryArchiveIndex.ml  Package.ml  Package.mli  PackageJson.ml  Resolver.ml  Solution.ml  Solution.mli  SolutionLock.ml  Solver.ml  Source.ml  Source.mli  SourceResolver.ml  SourceSpec.ml  SourceStorage.ml  SourceStorage.mli
scripts/: bootstrap.js
site/: languages.js
site/core/: Footer.js
test/: Store.ml
test-e2e/esy-build/: no-deps.test.js
test-e2e/install/: link.test.js
