(library
  (name Esy)
  (preprocess (pps
                ppx_sexp_conv
                ppx_inline_test
                ppx_expect
                lwt_ppx
                ppx_let
                ppx_deriving_yojson
                ppx_deriving.std))
  (flags (:standard (-w -39) "-open" "EsyLib"))
  (inline_tests)
  (libraries
            EsyLib
            EsyInstall
            EsyCommandExpression
            EsyShellExpansion
            EsyYarnLockfile
            EsyBuildPackage
            lwt
            lwt.unix
            cmdliner
            yojson
            bos
            logs
            logs.fmt
            logs.lwt
            logs.cli
            re
            fmt
            fmt.cli
            fmt.tty
            ppx_deriving_yojson.runtime
            str
            astring
            opam-format
            opam-state
            )
)

(ocamllex (modules DepSpecLexer))

(menhir
  (flags "--explain")
  (modules DepSpecParser)
  )
